add some css and functionaly

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/736x/48/29/5f/48295f0a998915a0e288880d9c74b5c4.jpg
+    " />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Contact-management</title>
   </head>
   <body>
     <div id="root"></div>
